Create NNValues_LETTER_ID_0.9366442953020134_1.0_sigmoid_batchSize30 new set.txt

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,142 @@ UI$4.class
 UI$3.class
 UI$2.class
 UI$1.class
+values/NNValues_DigitID_0.93_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.918_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.921_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.922_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.923_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.924_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.925_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.926_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.929_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.931_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.932_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.933_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9077_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9142_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9179_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9181_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9189_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9191_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9192_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9194_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9195_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9196_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9199_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9202_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9203_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9204_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9205_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9206_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9207_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9208_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9209_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9211_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9212_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9213_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9214_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9215_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9216_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9217_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9218_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9219_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9221_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9222_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9223_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9224_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9225_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9226_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9227_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9228_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9229_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9231_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9232_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9233_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9234_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9235_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9236_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9237_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9238_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9239_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9241_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9242_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9243_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9244_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9245_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9246_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9247_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9248_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9249_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9251_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9252_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9253_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9254_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9255_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9256_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9257_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9258_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9259_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9261_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9262_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9264_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9265_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9266_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9267_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9268_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9269_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9271_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9272_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9273_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9274_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9275_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9277_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9278_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9279_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9281_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9282_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9283_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9284_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9286_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9287_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9291_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9292_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9293_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9295_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9296_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9297_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9298_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9299_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9301_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9302_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9303_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9304_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9305_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9306_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9307_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9308_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9312_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9313_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9314_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9315_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9316_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9317_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9321_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9322_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9323_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9324_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9326_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9327_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9328_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9331_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9332_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9335_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9336_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9338_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9339_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9341_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9345_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9347_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9351_1.0_sigmoid_batchSize30 new set.txt
+values/NNValues_DigitID_0.9355_1.0_sigmoid_batchSize30 new set.txt
+data/A_Z Handwritten Data.csv
